--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,600;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,600&display=swap');
 
 :root {
   --black: #1e1e1e;
   --white: #fff;
   --violet: rgba(130, 118, 255, 1);
   --gold: rgba(255, 199, 89, 1);
+  --gray-400: rgba(141, 159, 244, 0.3);
+  --gray: rgba(255, 255, 255, 0.1);
   --content: 1200px;
 }
 
@@ -42,6 +44,7 @@ button {
   top: 0;
   z-index: 100;
   padding: 0 20px;
+  background: var(--black);
 }
 
 .header__inner {
@@ -147,4 +150,98 @@ button {
   gap: 0 20px;
   list-style: none;
   margin: 20px 0;
+}
+
+.benefits {
+  padding: 0 20px 0;
+  height: 100vh;
+  max-height: 1200px;
+  display: flex;
+  align-items: center;
+}
+
+.benefits__inner {
+  width: 100%;
+  padding: 70px 0;
+}
+
+.benefits__title {
+  font-size: 28px;
+  text-align: right;
+  font-weight: 600;
+  
+}
+
+.benefits__list {
+  margin: 120px 0 20px;
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-content: center;
+}
+
+.benefits__list-item {
+  border-radius: 10px;
+  border: 1px solid var(--gray-400);
+  background: var(--gray);
+  padding: 50px 70px 20px;
+  min-width: 350px;
+  position: relative;
+}
+
+.benefits__list-item-discount {
+  position: absolute;
+  z-index: 10;
+  top: calc(-200px / 2);
+  right: calc(-212.5px / 2);
+  background: url('./images/discount.svg') no-repeat;
+  width: 264px;
+  height: 247px;
+  background-position: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 62px;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.benefits__list-item-content {
+  position: relative;
+  z-index: 20;
+}
+
+.benefits__list-item-title {
+  text-align: center;
+  font-size: 21px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+}
+
+.benefits__list-item-button {
+  display: inline-block;
+  padding: 15px 30px;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 30px;
+  background: var(--violet);
+  color: var(--white);
+}
+
+.benefits__list-item-extra {
+  font-size: 12px;
+  text-align: right;
+  margin: 30px -50px 0 0;
+}
+
+.benefits__list-item-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 60px 0;
+  font-size: 24px;
+}
+benefits__list-item-title_1{
+    gap: 30px 0;
 }
